# rgbmaker

./: .gitignore  .readthedocs.yaml  JamesSchobert.py  LICENSE.rst  MANIFEST.in  README.md  __init__.py  cli.py  fetch.py  humans.MD  humans.txt  requirements.txt  setup.cfg  setup.py
docs/: conf.py  objects.inv  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  rgbmaker.doctree
docs/_build/html/: genindex.html  modules.html  py-modindex.html  rgbmaker.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html  rgbmaker.html
docs/_build/html/_modules/rgbmaker/: fetch.html  imgplt.html  tgss_spidx.html  wrightCC.html
docs/_build/html/_sources/: index.rst.txt
docs/_modules/rgbmaker/: imgplt.html  tgss_spidx.html
docs/_sources/: rgbmaker.rst.txt
docs/_static/: documentation_options.js
docs/source/: conf.py  examples.rst  index.rst  rgbmaker.rst
html/: .buildinfo  index.html
html/_sources/: modules.rst.txt
notebook/: Example_2.ipynb  rgbmaker_ex1.ipynb
src/: cli.py  wrightCC.py
src/rgbmaker/: __init__.py  cli.py  fetch.py  imgplt.py  intemma_spidx.py  tgss_spidx.py  wrightCC.py
src/rgbmaker/notebook/: rgbmaker_ex1.ipynb
tutorial/: rgbmaker-example1.ipynb
