[metadata]
name = rgbmaker
version = 0.0.4.7.5
author = Avinash Kumar
author_email = avialxee@gmail.com
description = A python package which communicates to different astronomical services and fetches fits and numerical data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/avialxee/rgbmaker
project_urls =
    Bug Tracker = https://github.com/avialxee/rgbmaker/issues
[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src